# ai-control-doge-cli

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  pyproject.toml  requirements.txt
docs/: api.md  deployment.md
src/: __init__.py  capture.py  clipboard.py  config.py  input_sim.py  logger.py  main.py  server.py  settings_ui.py  tray.py
tests/: __init__.py  test_api.py  test_capture.py  test_input.py
