[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-doge-remote"
version = "1.0.0"
description = "AI Remote Desktop - 被控端"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AI Doge Team", email = "ai-doge@example.com"},
]
keywords = ["ai", "remote-desktop", "control", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pystray>=0.19.0",
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/imdqcx/ai-control-doge-cli"
Documentation = "https://github.com/imdqcx/ai-control-doge-cli#readme"
Repository = "https://github.com/imdqcx/ai-control-doge-cli"
Issues = "https://github.com/imdqcx/ai-control-doge-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true